fix(ui): Enforce touch-action: none on mobile interactive elements

--- a/src/components/Bug/Bug.css
+++ b/src/components/Bug/Bug.css
@@ -9,6 +9,9 @@
   pointer-events: all;
   -webkit-user-select: none;
   user-select: none;
+  -webkit-tap-highlight-color: transparent;
+  -webkit-touch-callout: none;
+  touch-action: none;
 }
 
 .bug:hover {
